# Modulo11

./: README.md
Semana1/: Rmarkdown.Rmd  Rscriptsem1.R
Semana3/data_pipeline/: app.py  pyproject.toml  requests.http
semana6/dashboard_telemetria/: .gitignore  requirements.txt
semana6/dashboard_telemetria/src/: dashboard.py  data_extraction.py  prometheus.yml
semana6/dashboard_telemetria/src/config/: config.py
semana6/dashboard_telemetria/src/connectors/: prometheus_connector.py  supabase_connector.py
semana6/desafioETL/: .env  readme.md  requirements.txt
semana8/: Vendas.db  kaggle.json  read.me  semanaoito.py
semana8/mlruns/0/: meta.yaml
semana8/mlruns/0/10befe856e2b46478f0374621c5278fa/: meta.yaml
semana8/mlruns/0/10befe856e2b46478f0374621c5278fa/metrics/: price_y  quantity
semana8/mlruns/0/10befe856e2b46478f0374621c5278fa/params/: sale_id
semana8/mlruns/0/10befe856e2b46478f0374621c5278fa/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
