[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = ["Luisa Leite <99203030+luisaleite@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
requests = "^2.32.3"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
minio = "^7.2.8"
clickhouse-connect = "^0.7.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
